# urlshortener

./: README.md  pyproject.toml
shortener/: .env  admin.py  models.py  services.py  tests.py  views.py
shortener/migrations/: 0001_initial.py  0002_alter_url_slug_url_shortener_u_slug_0cb73a_idx.py  0003_alter_url_id.py  0004_alter_url_id.py
urlshortener/: settings.py  urls.py
